--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 	<p>Welcome to the Chat App</p>
+
+	<script src ="/socket.io/socket.io.js"></script>
+	<script src ="/js/index.js"></script>
 </body>
 </html>
