--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,17 @@
 <body>
 	<p>Welcome to the Chat App</p>
 
+	<ol id="messages"></ol>
+
+
+	<form id = "message-form">
+		<input type="text" name="message" placeholder="Enter Message"/>
+		<button>Send</button>
+	</form>
+	<button id="send-location">Send Location</button>
+
 	<script src ="/socket.io/socket.io.js"></script>
+	<script src ="js/libs/jquery-3.3.1.min.js"></script>
 	<script src ="/js/index.js"></script>
 </body>
 </html>
