--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,29 @@
 <head>
 	<title>Chat App</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href ="/css/styles.css">
+	<!--rel is relation-->
 </head>
-<body>
-	<p>Welcome to the Chat App</p>
+<body class="chat">
 
-	<ol id="messages"></ol>
+	<div class="chat__sidebar">
+		<h3>People</h3>
+		<div id="users"></div>
+	</div>
 
+	<div class="chat__main">
+		<ol class ="chat__messages" id="messages"></ol>
 
-	<form id = "message-form">
-		<input type="text" name="message" placeholder="Enter Message"/>
-		<button>Send</button>
-	</form>
-	<button id="send-location">Send Location</button>
+		<div class ="chat__footer">
+			<form id = "message-form">
+				<input type="text" name="message" placeholder="Enter Message" autofocus autocomplete="off" />
+				<button>Send</button>
+				<!--autocomplete turns off prediction-->
+			</form>
+			<button id="send-location">Send Location</button>
+		</div>		
+	</div>
+
 
 	<script src ="/socket.io/socket.io.js"></script>
 	<script src ="js/libs/jquery-3.3.1.min.js"></script>
